# chess

./: readme.md
backend/: Cargo.toml
backend/src/: byte_board.rs  engines.rs  game.rs  main.rs  score_functions.rs  types.rs  utils.rs
backend/src/engines/: first.rs  first_par.rs  first_trans.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: board.jsx  sidebar.jsx
frontend/src/model/: game.js  store.js  utils.js
frontend/src/styles/: board.css  index.css  sidebar.css
