[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
regex = "1.5.6"
itertools = "0.10.3"
lazy_static = "1.4.0"
rayon = "1.5.3"
num = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.3.4"
chashmap = "2.2.2"